--- a/conda_env_dev.yml
+++ b/conda_env_dev.yml
@@ -7,27 +7,27 @@ channels:
 dependencies:
 # base
 - python=3.8
-- pylint
-- doc8
-- jupyter
-- jupyterlab
+- pylint=2.9
+- doc8=0.9
+- jupyter=1.0
+- jupyterlab=3.1
 # execute "python -m ipykernel install --user --name=FRE-dagster-dev"
 # to register kernel
 # data munging
-- netCDF4
-- numpy
-- xarray
-- cf_xarray
-- cftime
-- cfunits
-- xesmf
+- netCDF4=1.5.7
+- numpy=1.21
+- xarray=0.19
+- cf_xarray=0.6
+- cftime=1.5
+- cfunits=3.3
+- xesmf=0.6
 # data handling
-- intake
-- intake-esm
+- intake=0.6
+- intake-esm=2021.1
 # workflow
-- dask
-- dask-jobqueue
-- dagster
-- dagstermill
-- dagit
-- graphviz
+- dask=2021.7
+- dask-jobqueue=0.7
+- dagster=0.12
+- dagstermill=0.12
+- dagit=0.12
+- graphviz=2.48
