--- a/conda_env_dev.yml
+++ b/conda_env_dev.yml
@@ -30,4 +30,7 @@ dependencies:
 - dagster=0.12
 - dagstermill=0.12
 - dagit=0.12
+- dagster-dask=0.12
+- dagster-shell=0.12
+- dagster-ssh=0.12
 - graphviz=2.48
