--- a/conda_env_dev.yml
+++ b/conda_env_dev.yml
@@ -20,7 +20,7 @@ dependencies:
 - cf_xarray=0.6
 - cftime=1.5
 - cfunits=3.3
-- xesmf=0.6
+# - xesmf=0.6
 # data handling
 - intake=0.6
 - intake-esm=2021.1
@@ -33,4 +33,3 @@ dependencies:
 - dagster-dask=0.12
 - dagster-shell=0.12
 - dagster-ssh=0.12
-- graphviz=2.48
